--- a/client/src/components/screens/home.css
+++ b/client/src/components/screens/home.css
@@ -1,5 +1,11 @@
 .home-card{
-    max-width: 500px;
+    max-width: 400px;
     height: max-content;
     margin: 26px auto;
+    border-radius: 5px;
+}
+.userName{
+    padding: 10px;
+    font-weight: 500;
+
 }
