--- a/client/src/components/screens/profile.css
+++ b/client/src/components/screens/profile.css
@@ -27,9 +27,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
 }
 .item{
   width: 32.5%;
   margin-bottom: 4px;
- max-height: 200px;
+  height: 200px;
 }
