--- a/client/src/components/screens/profile.css
+++ b/client/src/components/screens/profile.css
@@ -10,6 +10,10 @@
   }
   .main_container{
     border-bottom: 1px solid grey;
+    margin: 18px 0px;
+  }
+  .progress{
+    margin: 0;
   }
 
 .container{
