--- a/client/src/components/screens/home.css
+++ b/client/src/components/screens/home.css
@@ -9,3 +9,20 @@
     font-weight: 500;
 
 }
+.user_details{
+    display: flex; 
+    padding: 10px 5px; 
+}
+
+.user_details img{
+    width: 40px;
+    height: 40px;
+  border-radius: 50%;
+  border: 2px solid rgb(241, 93, 192);
+}
+#delete_icon{
+    position: absolute;
+  
+   right: 0;
+   padding: 10px 5px;
+}
