--- a/client/src/components/screens/home.css
+++ b/client/src/components/screens/home.css
@@ -7,6 +7,7 @@
 .userName{
     padding: 10px;
     font-weight: 500;
+   
     
 
 }
@@ -33,4 +34,14 @@
 
 .material-icons:hover{
     color: gray;
+}
+.userfield{
+    display: flex;
+    flex-direction: column;
+}
+.userfield h6{
+    margin: 0;
+}
+.date{
+    margin-left: 10px;
 }
