--- a/client/src/components/screens/home.css
+++ b/client/src/components/screens/home.css
@@ -62,6 +62,19 @@ h6{
     font-size: small;
     font-weight: 400;
 }
+.loadingMain{
+    height: 100vh;
+    width: 100vw;
+}
+.loadingImgContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 200px;
+    
+    
+}
+
 
 
 
